--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,25 @@
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
 html {
-	height: 100vh;
-	width: 100vw;
-/*	animation-name: wall;*/
-/*	animation-duration: 7s;*/
-/*	!*animation-iteration-count: infinite;*!*/
-/*	animation-iteration-count: 1;*/
-	background: linear-gradient(145deg, rgb(68, 68, 68), rgb(0, 0, 0));
-	/*filter: blur(8px)*/
+  height: 100vh;
+  width: 100vw;
+  /*	animation-name: wall;*/
+  /*	animation-duration: 7s;*/
+  /*	!*animation-iteration-count: infinite;*!*/
+  /*	animation-iteration-count: 1;*/
+  background: linear-gradient(145deg, rgb(68, 68, 68), rgb(0, 0, 0));
+  /*filter: blur(8px)*/
 }
 /*div{*/
 /*	align-self: auto;*/
@@ -34,11 +47,11 @@ html {
 /*div:after{*/
 /*	content: "Hello World!";*/
 /*}*/
- /*The animation code*/
+/*The animation code*/
 /*@keyframes box {*/
-  /*0%   {transform: translateY(10px);}*/
-  /*50% {transform: translateY(-20px);color: black;}*/
-  /*100% {transform: translateY(10px);}*/
+/*0%   {transform: translateY(10px);}*/
+/*50% {transform: translateY(-20px);color: black;}*/
+/*100% {transform: translateY(10px);}*/
 /*}*/
 /*@keyframes wall {*/
 /*	0% {background-color: black;}*/
