--- a/src/styling/Home.css
+++ b/src/styling/Home.css
@@ -20,3 +20,15 @@
     height: 5rem;
     width: 5rem;
 }
+
+
+
+
+@keyframes App-logo-spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
