--- a/src/styling/Navbar.css
+++ b/src/styling/Navbar.css
@@ -38,7 +38,7 @@ body {
 .nav li.active {
     background-color: mediumpurple;
 }
-.nav li:hover .flip-nav-inner{
+.nav li:hover {
     background-color: red;
 }
 .flip-nav-inner{
