--- a/src/styling/Home.css
+++ b/src/styling/Home.css
@@ -12,6 +12,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 16vh;
+    z-index: 6;
 }
 .reactLogo{
     height: 5rem;
@@ -39,7 +40,7 @@
     flex: 0 0 54rem;
     flex-wrap: wrap;
     position: relative;
-    z-index: -1;
+    z-index: 7;
     /* border: #38BDDF solid 1px;
 }
 #grid-base1 {
@@ -95,13 +96,15 @@
     padding: 1px;
     z-index: 9;
 }
-.img-overlay:hover{
-    background-color: transparent;
-}
+/*.img-overlay:hover{*/
+/*    background-color: transparent;*/
+/*    color: blue;*/
+/*}*/
 
 .base-container{
     position: relative;
     height: 28rem;
+    z-index:8;
 }
 
 .project-text{
