--- a/src/styling/index.css
+++ b/src/styling/index.css
@@ -13,13 +13,18 @@ code {
 }
 html {
   height: 100vh;
-  width: 100vw;
+  /*width: 100vw;*/
   /*	animation-name: wall;*/
   /*	animation-duration: 7s;*/
   /*	!*animation-iteration-count: infinite;*!*/
   /*	animation-iteration-count: 1;*/
   background: linear-gradient(145deg, rgb(68, 68, 68), rgb(0, 0, 0));
   /*filter: blur(8px)*/
+  /*height: 100vh;*/
+  min-height: 100vh;
+  max-height: 100vh;
+  background-size: 100vw 100vh;
+  overflow: scroll;
 }
 /*div{*/
 /*	align-self: auto;*/
