--- a/src/styling/Navbar.css
+++ b/src/styling/Navbar.css
@@ -51,6 +51,34 @@ body {
 }
 
 
-.title {
+#title {
     font-size: 2rem;
+    margin-left: 1vw;
+    justify-content: end;
+    box-shadow: 2px 3px 4px 1px black;
+}
+#title:hover{
+    /*animation: spin 3s infinite;*/
+    /*transform: rotateY(5deg);*/
+    /*color: white;*/
+    /*border: 0.5px solid green;*/
+    /*border-radius: 1rem;*/
+    /*background-color: transparent;*/
+    font-size: 2rem;
+    margin-left: 1vw;
+    justify-content: end;
+    box-shadow: 0px -1px 1px 1px black;
+
+}
+#logo-circle{
+
+}
+
+@keyframes spin {
+    0% {transform: rotateY(0deg)}
+    100% {transform: rotateY(360deg)}
+}
+
+#logo-text{
+    font-size: 5px;
 }
