--- a/src/styling/Navbar.css
+++ b/src/styling/Navbar.css
@@ -7,13 +7,49 @@ body {
 }
 
 .nav {
-    background-color: #333;
-    color: whitesmoke;
+    /*background-color: #333;*/
+    /*color: whitesmoke;*/
+    /*display: flex;*/
+    /*justify-content: space-between;*/
+    /*align-items: stretch;*/
+    /*gap: 2rem;*/
+    /*padding: 0 1rem;*/
+
+    /*background-color: #333;*/
+    /*color: whitesmoke;*/
+    /*display: flex;*/
+    /*justify-content: space-between;*/
+    /*align-items: stretch;*/
+    /*grid-gap: 2rem;*/
+    /*gap: 2rem;*/
+    /*padding: 0 1rem;*/
+    /*border: 1px solid red;*/
+    /*border-radius: 21px;*/
+    /*box-shadow: 0px 0px 37px 0px black;*/
+    /*margin-top: 2vh;*/
+
+    /* background-color: #333; */
+    /* color: whitesmoke; */
+    /* display: flex; */
+    /* justify-content: space-between; */
+    /* align-items: stretch; */
+    /* gap: 2rem; */
+    /* padding: 0 1rem; */
+    /*background-color: #333;*/
+    /*color: whitesmoke;*/
     display: flex;
     justify-content: space-between;
     align-items: stretch;
+    grid-gap: 2rem;
+    grid-gap: 2rem;
     gap: 2rem;
     padding: 0 1rem;
+    border: 1px solid #D62D2D;
+    border-radius: 12px;
+    box-shadow: 0px 0px 37px 0px black;
+    margin-top: 2vh;
+    z-index: 1000;
+    position: relative;
 }
 
 .nav ul {
