--- a/src/styling/Navbar.css
+++ b/src/styling/Navbar.css
@@ -28,28 +28,29 @@ body {
     /*box-shadow: 0px 0px 37px 0px black;*/
     /*margin-top: 2vh;*/
 
-    /* background-color: #333; */
-    /* color: whitesmoke; */
-    /* display: flex; */
-    /* justify-content: space-between; */
-    /* align-items: stretch; */
-    /* gap: 2rem; */
-    /* padding: 0 1rem; */
+    /* background-color: #333;*/
+    /* color: whitesmoke;*/
+    /* display: flex;*/
+    /* justify-content: space-between;*/
+    /* align-items: stretch;*/
+    /* gap: 2rem;*/
+    /* padding: 0 1rem;*/
     /*background-color: #333;*/
     /*color: whitesmoke;*/
+
     display: flex;
     justify-content: space-between;
     align-items: stretch;
     grid-gap: 2rem;
-    grid-gap: 2rem;
     gap: 2rem;
     padding: 0 1rem;
-    border: 1px solid #D62D2D;
-    border-radius: 12px;
-    box-shadow: 0px 0px 37px 0px black;
+    /*border: 1px solid #D62D2D;*/
+    /*border-radius: 12px;*/
+    /*box-shadow: 0px 0px 37px 0px black;*/
     margin-top: 2vh;
     z-index: 1000;
-    position: relative;
+    position: fixed;
+
 }
 
 .nav ul {
@@ -77,15 +78,6 @@ body {
 .nav li:hover{
     background-color: #D62D2D;
 }
-.flip-nav-inner{
-    /*position: relative;*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-    /*text-align: center;*/
-    /*transition: transform 0.8s;*/
-    /*transform-style: preserve-3d;*/
-}
-
 
 #title {
     font-size: 2rem;
