--- a/src/styling/Home.css
+++ b/src/styling/Home.css
@@ -138,6 +138,8 @@ a{
     justify-content: center;
     align-content: center;
     margin-top: 15rem;
+    text-shadow: -1px 41px 8px;
+
 }
 body{
     font-family: 'Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',Meiryo,メイリオ,sans-serif;
@@ -172,14 +174,17 @@ body{
     text-transform: uppercase;
     letter-spacing: 1px;
     text-align: center;
-    color: #fff;
+    /*color: #fff;*/
+    color: #38BDDF;
     margin: 10rem;
     transform: rotateX(52deg);
-
-
-
     /*mess with this effect for 3d transitioning, promising*/
     /*text-shadow: -1px 41px 8px;*/
+    animation: fadeIn 5s;
+}
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
 
 #links{
@@ -224,4 +229,12 @@ body{
 }
 #devTitle{
     /*display: none;*/
+}
+
+.fade-in {
+    transition: opacity 1s ease;
+}
+.fade-out {
+    opacity: 0;
+    transition: opacity 1s ease;
 }
