--- a/src/styling/Home.css
+++ b/src/styling/Home.css
@@ -211,7 +211,7 @@ body{
 #skills{
     width: 100vw;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     margin: 5rem;
 }
 
