--- a/src/styling/Home.css
+++ b/src/styling/Home.css
@@ -180,11 +180,15 @@ body{
     transform: rotateX(52deg);
     /*mess with this effect for 3d transitioning, promising*/
     /*text-shadow: -1px 41px 8px;*/
-    animation: fadeIn 5s;
+    /*animation: fadeIn 5s;*/
 }
 @keyframes fadeIn {
     0% { opacity: 0; }
     100% { opacity: 1; }
+}
+@keyframes fadeOut {
+    99% { opacity: 1; }
+    0% { opacity: 0; }
 }
 
 #links{
