--- a/src/styling/index.css
+++ b/src/styling/index.css
@@ -19,6 +19,7 @@ html {
   /*	!*animation-iteration-count: infinite;*!*/
   /*	animation-iteration-count: 1;*/
   background: linear-gradient(145deg, rgb(68, 68, 68), rgb(0, 0, 0));
+  /*background-image: url("../img/river-forest-bg.jpeg");*/
   /*background-image: url("../img/ocean-breaking-wave.jpeg");*/
   /*filter: blur(8px)*/
   /*height: 100vh;*/
