--- a/src/styling/Projects.css
+++ b/src/styling/Projects.css
@@ -1,4 +1,11 @@
 #projects{
-    /*margin: 5rem;*/
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
+    /* margin-left: 20rem; */
+    display: flex;
+    /* z-index: 10; */
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100vh;
 }
+
+
