--- a/src/styling/Home.css
+++ b/src/styling/Home.css
@@ -11,6 +11,8 @@ a{
 }
 .homePage{
     /*background: yellow;*/
+    background-image: url('../img/glassy-wave-sunset.jpeg');
+
 }
 .div1{
     /*color: yellow;*/
