--- a/src/styling/Contact.css
+++ b/src/styling/Contact.css
@@ -9,7 +9,6 @@
     display: flex;
     height: 100vh;
     width: 50vw;
-
 }
 /*#container-etc{*/
 /*    display: flex;*/
@@ -19,35 +18,75 @@
 /*    width: 25vw;*/
 /*    margin: 7rem;*/
 /*}*/
+#outer-profile-img-box{
+    border: 2px solid whitesmoke;
+    height: 11rem;
+    width: 29.4rem;
+    border-radius: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 75%);
+}
+#outer-profile-img-box:hover{
+    box-shadow: 0px 0px 18px 3px cyan;
+}
+#profile-img-box{
+    /*border: 1px solid whitesmoke;*/
+    /*height: 2rem;*/
+    /*width: 4rem;*/
+    display: flex;
+}
+
+
 #yoshi-img{
     height: 10rem;
     width: auto;
-    border-radius: 30px;
+    border-radius: 6rem;
 }
 #infoContainer{
-    display: flex;
-    justify-content: start;
-    align-items: flex-start;
-    margin-top: 7vh;
-    color: white;
+    display: table;
+    /* justify-content: center; */
+    /* align-items: flex-start; */
+    margin-top: 11vh;
+    color: black;
     width: 100vw;
-    height: 100vh;
+    height: 79vh;
     /* margin-top: 5vh; */
-    /* position: fixed; */
-    margin-left: 12vw;
+    /* position: relative; */
+    margin-left: 28vw;
+    border: 1px solid whitesmoke;
+    background-color: transparent;
+
+    padding: 2rem;
+    border-radius: 2rem;
+    /* margin-bottom: 49vh; */
+    overflow: inherit;
+    box-shadow: 0px 0px 10px 2px darkslategrey;
 }
+
+
 #email-container{
-    border: 3px solid grey;
-    border-radius: 7px;
-    /*padding: 1rem;*/
+    border: 3px solid whitesmoke;
+    /*border-radius: 7px;*/
+    /* padding: 1rem; */
     padding-left: 1rem;
     padding-right: 7rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
-    background-color: rgba(128, 128, 128, 30%);
-    /*background-image: url('../img/glassy-wave-sunset.jpeg');*/
+    /*background-color: rgba(128, 128, 128, 30%);*/
+    background-color: rgba(255, 255, 255, 75%);
+
+    /* background-image: url(../img/glassy-wave-sunset.jpeg); */
     object-fit: cover;
+    /* margin-top: -4vh; */
+    border-radius: 1rem;
 }
+
+#email-container:hover{
+    box-shadow: 0px 0px 18px 3px cyan;
+}
+
 .input-form-lengths{
     width: 14rem;
     overflow: visible;
@@ -55,6 +94,8 @@
 #message-area{
     width: 21rem;
     height: 10rem;
+    min-height: 10rem;
+    min-width: 21rem;
 }
 label{
     display: block;
@@ -79,5 +120,18 @@ button:hover{
     transform: translate(0px, -2px);
     transition: .2s ease-in-out;
 }
+#about-me-text{
+    border: 2px solid whitesmoke;
+    border-radius: 1rem;
+    padding: 1rem;
+    margin-top: -1rem;
+    margin-bottom: -2rem;
+    /* opacity: 58%; */
+    /*background-color: rgba(128, 128, 128, 30%);*/
+    background-color: rgba(255, 255, 255, 75%);
 
+}
 
+#about-me-text:hover{
+    box-shadow: 0px 0px 18px 3px cyan;
+}
